<resources>
    <string name="app_name">AgenceTouristique</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="btnConnexion">connexion</string>
    <string name="txtInscription">Pas encore de compte ? Inscrivez-vous</string>
    <string name="connexion">Connexion</string>
    <string name="email">Email</string>
    <string name="inscription">Inscription</string>
    <string name="hintPrenom">Prénom</string>
    <string name="hintNom">Nom</string>
    <string name="hintEmail">Email</string>
    <string name="hintMdp">Mot de passe</string>
    <string name="hintAge">Âge</string>
    <string name="hintTelephone">Téléphone</string>
    <string name="hintAdresse">Adresse</string>
    <string name="btnInscription">s’inscrire</string>
    <string name="deja_inscrit">Deja inscrit?</string>
    <string name="nombre_de_places_r_server">Nombre de places à réserver</string>
    <string name="retourner">Retourner</string>
    <string name="r_server">Réserver</string>
    <string name="choisir_une_date">Choisir une date</string>
    <string name="activit_s_incluses">Activités incluses</string>
    <string name="description">Description</string>
    <string name="filtres_de_recherches">Filtres de recherches</string>
    <string name="type_de_voyage">Type de voyage</string>
    <string name="culturel">Culturel</string>
    <string name="aventure">Aventure</string>
    <string name="bien_tre">Bien-être</string>
    <string name="nature">Nature</string>
    <string name="voir_les_dates_disponibles">📅 Voir les dates disponibles</string>
    <string name="destination">Destination</string>
    <string name="date_de_d_part">Date de départ</string>
    <string name="budget_maximum">Budget maximum</string>
    <string name="annuler">Annuler</string>
    <string name="appliquer">Appliquer</string>
    <string name="historique_des_r_servations">Historique des réservations</string>
    <string name="retourner1">Retourner</string>
    <string name="bienvenue">Bienvenue !</string>
    <string name="rechercher_un_voyage">Rechercher un voyage</string>
    <string name="rechercher">Rechercher</string>
    <string name="filtres_avanc_s">Filtres avancés</string>
    <string name="voir_l_historique">Voir l\'historique</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="annuler1">Annuler</string>
    <string name="image_du_voyage">Image du voyage</string>
    <string name="nom_du_voyage">Nom du voyage</string>
    <string name="destination3">Destination</string>
    <string name="_150">150$</string>
</resources>