<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:src="@drawable/inscription"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="350dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollZone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="390dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="40dp"
            android:paddingBottom="24dp">


            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hintPrenom"
                android:background="@drawable/edittext_bg"
                android:textColor="#FFFFFF"
                android:textColorHint="#AAAAAA"
                android:padding="10dp"
                android:layout_marginTop="8dp" />


            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hintNom"
                android:background="@drawable/edittext_bg"
                android:textColor="#FFFFFF"
                android:textColorHint="#AAAAAA"
                android:padding="10dp"
                android:layout_marginTop="8dp" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress"
                android:background="@drawable/edittext_bg"
                android:textColor="#FFFFFF"
                android:textColorHint="#AAAAAA"
                android:padding="10dp"
                android:layout_marginTop="8dp" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hintMdp"
                android:inputType="textPassword"
                android:background="@drawable/edittext_bg"
                android:textColor="#FFFFFF"
                android:textColorHint="#AAAAAA"
                android:padding="10dp"
                android:layout_marginTop="8dp" />


            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hintAge"
                android:inputType="number"
                android:background="@drawable/edittext_bg"
                android:textColor="#FFFFFF"
                android:textColorHint="#AAAAAA"
                android:padding="10dp"
                android:layout_marginTop="8dp" />


            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hintTelephone"
                android:inputType="phone"
                android:background="@drawable/edittext_bg"
                android:textColor="#FFFFFF"
                android:textColorHint="#AAAAAA"
                android:padding="10dp"
                android:layout_marginTop="8dp" />


            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hintAdresse"
                android:background="@drawable/edittext_bg"
                android:textColor="#FFFFFF"
                android:textColorHint="#AAAAAA"
                android:padding="10dp"
                android:layout_marginTop="8dp" />


            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnInscription"
                android:textAllCaps="false"
                android:backgroundTint="#FFFFFF"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/loginLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deja_inscrit"
                android:textColor="#CCCCCC"
                android:textSize="14sp"
                android:textStyle="italic"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toBottomOf="@id/loginButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
