<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginTop="12dp"
    card_view:cardCornerRadius="14dp"
    card_view:cardElevation="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageVoyage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_du_voyage"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:padding="12dp"
            android:background="#66000000">

            <TextView
                android:id="@+id/nomVoyage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nom_du_voyage"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination3"
                android:textSize="14sp"
                android:textColor="#dddddd" />

            <TextView
                android:id="@+id/prix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_150"
                android:textSize="14sp"
                android:textColor="#ffffff" />

        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
